--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,6 +40,13 @@
         android:layout_marginTop="16dp"/>
 
     <Button
+        android:id="@+id/loginButton"
+        android:text="Войти"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"/>
+
+    <Button
         android:id="@+id/exitButton"
         android:text="Выйти"
         android:layout_width="match_parent"
