--- a/app/src/main/res/layout/activity_employee_main.xml
+++ b/app/src/main/res/layout/activity_employee_main.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="16dp"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/welcomeText"
-        android:text="Добро пожаловать!"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btnViewOrders"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Просмотр всех заказов пользователя"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/btnEditOrders"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Редактирование заказов"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/btnDeleteUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Удалить пользователя"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Назад"/>
+
 </LinearLayout>
