--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,4 +46,13 @@
         android:padding="12dp"
         android:layout_marginBottom="12dp"/>
 
+    <!-- Новая кнопка -->
+    <Button
+        android:id="@+id/backToRegisterBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Назад к регистрации"
+        android:backgroundTint="#03A9F4"
+        android:textColor="@android:color/white"
+        android:padding="12dp"/>
 </LinearLayout>
